<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_release_name" >快收红包</string>
    <string name="app_dev_name">快收</string>
    <string name="tab_info">资讯</string>
    <string name="tab_game">蜜玩</string>
    <string name="tab_redbag">收红包</string>
    <string name="tab_circle">商圈</string>
    <string name="tab_snatch">淘区块</string>
    <string name="tab_user">我的</string>
    <string name="network_error_and_late">网络异常，请稍后再试</string>
    <string name="parse_error_and_late">解析错误，请稍后再试</string>
    <string name="http_error_and_late">服务器错误，请稍后再试</string>
    <string name="timeout_and_late">请求超时，请稍后再试</string>
    <string name="unknow_error_and_late">未知错误，请稍后再试</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="ensure">确认</string>
    <string name="reply">回复</string>
    <string name="replyed">回复:</string>
    <string name="success">成功</string>
    <string name="alter">修改</string>
    <string name="symbol_percent">%</string>
    <string name="zero">0</string>
    <string name="apply_for">申请中</string>
    <string name="paymented">已打款</string>
    <string name="no_pass">不通过</string>
    <string name="has_refund">已退款</string>
    <string name="content_login_agreenment">注册即表示已阅读并同意&lt;font color=#ff3b3b&gt;&lt;u&gt;用户协议&lt;/u&gt;&lt;/font&gt;</string>
    <string name="type_login_wx">微信登录</string>
    <string name="type_login_phone">登录</string>
    <string name="type_login_register">注册</string>
    <string name="type_login_register_success">注册成功</string>
    <string name="type_login_foeget_success">修改成功</string>
    <string name="type_login_verify_send_success">验证码已发送</string>
    <string name="title_login_phone">手机号登录</string>
    <string name="hint_login_phone">请输入您的手机号或邮箱</string>
    <string name="hint_login_password">请输入登录密码</string>
    <string name="btn_login_register">没有账号，去注册</string>
    <string name="btn_login_forget_password">忘记密码</string>
    <string name="hint_login_other_login">微信登录</string>
    <string name="input_password_type">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@</string>
    <string name="input_phone_error">手机号不正确，请检查后重新输入</string>
    <string name="input_password_error">密码位数应在6-15位之间，请检查后重新输入</string>
    <string name="input_safe_password_error">密码位数应为6位之间，请检查后重新输入</string>
    <string name="input_verity_error">验证码不正确，请检查后重新输入</string>
    <string name="input_verity_ima_error">图形验证码不正确，请检查后重新输入</string>
    <string name="verity_ima_empty">图形验证码为空</string>
    <string name="input_name_error">姓名不可为空</string>
    <string name="input_bank_error">银行卡号不可为空</string>
    <string name="input_alipay_name_error">姓名不可为空</string>
    <string name="input_alipay_user_error">支付宝账号不可为空</string>
    <string name="title_login_forget_password">忘记密码</string>
    <string name="title_login_register">注册</string>
    <string name="title_phone_binding">绑定手机号</string>
    <string name="hint_login_forget_phone">请输入手机号</string>
    <string name="hint_login_forget_verify">请输入验证码</string>
    <string name="hint_login_forget_ima_verify">请输入图形验证码</string>
    <string name="btn_login_forget_verify">获取验证码</string>
    <string name="hint_login_forget_password">请输入新登录密码</string>
    <string name="hint_bind_password">请输入登录密码</string>
    <string name="search_hint">搜索感兴趣的</string>
    <string name="format_people_zan">%d人赞</string>
    <string name="recent_comment">最新评论</string>
    <string name="share">分享</string>
    <string name="share_wechat">微信</string>
    <string name="share_circle">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_weibo">微博</string>
    <string name="share_report">举报</string>
    <string name="comment_hint">我要说两句</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="post_success">发布成功</string>
    <string name="uninstall_this_app">未安装对应的app</string>
    <string name="report_success">举报成功</string>
    <string name="pls_select_report_content">请选择举报内容</string>
    <string name="format_reading_awara">阅读资讯获得%sSEAL</string>
    <string name="word_tip">红包发布24小时内，只有输入正确的口令才能收红包</string>
    <string name="word_item_name">口令</string>
    <string name="word_item_hint">输入口令</string>
    <string name="amout_tip">附近的人可随机领取该红包</string>
    <string name="amout_item_name">总金额</string>
    <string name="amout_item_hint">输入金额</string>
    <string name="yuan">元</string>
    <string name="time">次</string>
    <string name="count_tip">可让附近的人领取的红包数</string>
    <string name="count_item_name">红包个数</string>
    <string name="count_item_hint">100</string>
    <string name="quantity">个</string>
    <string name="scope_tip">红包发放的领取位置与范围</string>
    <string name="scope_item_name">范围</string>
    <string name="scope_item_hint">全市</string>
    <string name="location_tip">红包发放的领取位置（如果不设置，默认是您的当前位置）</string>
    <string name="location_name">位置</string>
    <string name="location_item_hint">当前位置</string>
    <string name="more_item_name">链接文字</string>
    <string name="more_item_url">链接地址</string>
    <string name="more_item_wechat">微信号</string>
    <string name="more_item_weibo">微博号</string>
    <string name="link_item_hint">例：http://www.baidu.com(选填)</string>
    <string name="pack_up">收起</string>
    <string name="more">更多</string>
    <string name="link_public_password">公开口令</string>
    <string name="save_password_temp">保存为口令红包模板</string>
    <string name="save_random_temp">保存为随机红包模板</string>
    <string name="save_lucky_temp">保存为幸运红包模板</string>
    <string name="tip_obey_rule">发布信息需遵守</string>
    <string name="redbag_rule">《快收红包广告规则》</string>
    <string name="add_money_to_redbag">塞钱进红包</string>
    <string name="get_pic_permission">请先设置相机和本地图片权限</string>
    <string name="pls_input_link_name">请输入链接名称(选填)</string>
    <string name="pls_input_wechat">请输入微信号(选填)</string>
    <string name="pls_input_weibo">请输入微博号(选填)</string>
    <string name="random_redbag">随机红包</string>
    <string name="password_redbag">口令红包</string>
    <string name="lucky_redbag">幸运红包</string>
    <string name="select_temp">选择模板</string>
    <string name="hint_red_packet_comments">最新评论</string>
    <string name="hint_red_packet_share_hint_top">独乐乐不如众乐乐</string>
    <string name="hint_red_packet_share_hint_bottom">推荐好友，坐享收益</string>
    <string name="use_temp">使用模板</string>
    <string name="delete_temp">删除模板</string>
    <string name="delete_success">删除成功</string>
    <string name="format_count_redbag_temp_random">共%d个随机红包模板</string>
    <string name="format_count_redbag_temp_password">共%d个口令红包模板</string>
    <string name="format_count_redbag_temp_lucky">共%d个幸运红包模板</string>
    <string name="search_location">使用位置</string>
    <string name="all_country">全国</string>
    <string name="hongkong">香港特别行政区</string>
    <string name="macao">澳门特别行政区</string>
    <string name="taiwan">台湾省</string>
    <string name="pls_select_location">请选择位置</string>
    <string name="canot_get_location">未能获取坐标，请重新选择</string>
    <string name="current_select_address">当前选择地址：</string>
    <string name="input_word_hint">请输入口令</string>
    <string name="ksb">SEAL</string>
    <string name="has_save_packet">已存入账户</string>
    <string name="redbag_joined_left">已领取%s个，共%s个</string>
    <string name="redbag_joined_title">领取明细</string>
    <string name="text_my_operate_center">运营中心</string>
    <string name="text_my_recommend">我的推荐</string>
    <string name="text_my_city">我的节点</string>
    <string name="text_my_order">我的订单</string>
    <string name="text_my_dynamic">红包动态</string>
    <string name="text_my_collection">我的收藏</string>
    <string name="text_my_comments">我的评论</string>
    <string name="text_my_safe">安全中心</string>
    <string name="text_my_address">收货地址</string>
    <string name="text_my_help">帮助中心</string>
    <string name="text_my_welfare">我的福利</string>
    <string name="receive_pay_code">收付款</string>
    <string name="money_unit_ksb">KSB</string>
    <string name="money_unit_seal">SEAL</string>
    <string name="money_unit_qc">QC</string>
    <string name="money_unit_yuan">元</string>
    <string name="recommend">推荐</string>
    <string name="fans">粉丝</string>
    <string name="share_benefit">分润(SEAL)</string>
    <string name="today_ksb_price">今日SEAL价(元)</string>
    <string name="equal_value">等值(元)</string>
    <string name="start_recommend">立即推荐赚收益</string>
    <string name="property_scale">scale</string>
    <string name="property_alpha">alpha</string>
    <string name="manager">经理</string>
    <string name="inspector">总监</string>
    <string name="star_inspector">五星总监</string>
    <string name="agent">代理</string>
    <string name="seller">商家</string>
    <string name="cant_open">暂未开放</string>
    <string name="ksb_address">SEAL地址</string>
    <string name="copy_address">复制</string>
    <string name="ksb_transfer">SEAL转换</string>
    <string name="ksb_transfer_type_title">选择收款账户</string>
    <string name="transfer">转赠</string>
    <string name="grant_success">转赠成功</string>
    <string name="ksb_num">SEAL数</string>
    <string name="ksb_trend">SEAL趋势</string>
    <string name="my_ksb_title">我的SEAL</string>
    <string name="qc_num">QC数</string>
    <string name="my_qc_title">我的QC</string>
    <string name="my_qc">我的QC</string>
    <string name="detail">明细</string>
    <string name="square">广场</string>
    <string name="city">节点</string>
    <string name="format_next_buy_time">下次竞购时间：%s</string>
    <string name="buy_city_owner">竞购节点</string>
    <string name="city_owner">节点</string>
    <string name="buy_record">竞购记录</string>
    <string name="my_city">我的节点</string>
    <string name="format_current_own_city">当前拥有%d个节点</string>
    <string name="city_total_benfit">节点总收益</string>
    <string name="redbag_benfit">红包收益</string>
    <string name="buy_price_benfit">竞购溢价</string>
    <string name="redbag_benfit_detail">红包收益>></string>
    <string name="bid_price_arrow">竞购溢价>></string>
    <string name="buy_hall">竞购大厅</string>
    <string name="format_buy_city">竞购得%s节点</string>
    <string name="cur_area">所在区域</string>
    <string name="next_buy_time">下次竞购时间</string>
    <string name="format_special_price">特惠：%dQC</string>
    <string name="immediately_buy_city">立即竞购节点</string>
    <string name="city_owner_benefit_explain">节点收益说明</string>
    <string name="select_purchase_way">购买支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="wxpay">微信支付</string>
    <string name="format_ksb_pay">我的SEAL(%sSEAL)</string>
    <string name="pay_amount">支付金额</string>
    <string name="format_equal_ksb">等值%sSEAL</string>
    <string name="has_read_and_agree">我已阅读并同意</string>
    <string name="city_buy_agreement">《节点竞购协议》</string>
    <string name="agent_agreement">《代理商协议》</string>
    <string name="bug_agent">购买代理商</string>
    <string name="identify_name">姓\u3000\u3000名</string>
    <string name="add_card_notice">*请绑定自己的银行卡，勿绑定信用卡，否则将影响提现</string>
    <string name="bankcard_name">姓\u3000名</string>
    <string name="bankcard_number">银行卡号</string>
    <string name="bankcard_mobile">银行卡预留手机号</string>
    <string name="delete">删除</string>
    <string name="alipay_name">姓\u3000\u3000\u3000名</string>
    <string name="alipay_account">支付宝帐号</string>
    <string name="bind_alipay_notice">*请绑定自己的支付宝，否则将影响提现</string>
    <string name="pls_input_name">请输入姓名</string>
    <string name="pls_input_card_number">请输入银行卡卡号</string>
    <string name="pls_input_card_mobile">请输入预留手机号</string>
    <string name="pls_input_alipay_account">请输入支付宝账号</string>
    <string name="image_vertify_code">图形验证码</string>
    <string name="bid_this_ad">竞拍该广告</string>
    <string name="bid_other_ad">竞拍其他广告</string>
    <string name="report">举报</string>
    <string name="pelase_input_idcard">请输入身份证号码</string>
    <string name="please_banck_card">请输入银行卡号码</string>
    <string name="idcard_str">身份证号码</string>
    <string name="banck_card_str">银行卡</string>
</resources>