<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingLeft="@dimen/space15"
    android:paddingRight="@dimen/space15">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_white"
        android:paddingLeft="@dimen/space5">
        <TextView
            android:id="@+id/tv_wechat"
            style="@style/dialog_more_item"
            android:drawableTop="@drawable/ic_share_wechat"
            android:text="@string/share_wechat"/>
        <TextView
            android:id="@+id/tv_circle"
            style="@style/dialog_more_item"
            android:drawableTop="@drawable/ic_share_circle"
            android:text="@string/share_circle"/>
        <TextView
            android:id="@+id/tv_qq"
            style="@style/dialog_more_item"
            android:drawableTop="@drawable/ic_share_qq"
            android:text="@string/share_qq"/>
        <TextView
            android:id="@+id/tv_sinaweibo"
            style="@style/dialog_more_item"
            android:drawableTop="@drawable/ic_share_weibo"
            android:text="@string/share_weibo"/>
        <TextView
            android:id="@+id/tv_report"
            style="@style/dialog_more_item"
            android:drawableTop="@drawable/ic_share_report"
            android:text="@string/share_report"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_white"
        android:layout_marginTop="@dimen/space10"
        android:layout_marginBottom="@dimen/space10"
        android:gravity="center"
        android:paddingTop="@dimen/space15"
        android:paddingBottom="@dimen/space15"
        android:textColor="@color/text_black"
        android:textSize="@dimen/textfont15"
        android:text="@string/cancel"/>

</LinearLayout>