<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/layout_divide_deep_line"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/rgroup_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/bg_white">
            <RadioButton
                android:id="@+id/rbtn_info"
                style="@style/rdbtn_nav"
                android:drawableTop="@drawable/tab_info_selector"
                android:text="@string/tab_info"/>
            <RadioButton
                android:id="@+id/rbtn_game"
                style="@style/rdbtn_nav"
                android:drawableTop="@drawable/tab_game_selector"
                android:text="@string/tab_game"/>
            <RadioButton
                android:id="@+id/rbtn_redbag"
                style="@style/rdbtn_nav"
                android:drawableTop="@drawable/tab_redbag_selector"
                android:text="@string/tab_redbag"/>
            <RadioButton
                android:id="@+id/rbtn_circle"
                style="@style/rdbtn_nav"
                android:drawableTop="@drawable/tab_circle_selector"
                android:text="@string/tab_snatch"/>
            <RadioButton
                android:id="@+id/rbtn_user"
                style="@style/rdbtn_nav"
                android:drawableTop="@drawable/tab_user_selector"
                android:text="@string/tab_user"/>
        </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"/>
                <TextView
                    android:id="@+id/v_fake_user"
                    style="@style/rdbtn_nav"
                    android:drawableTop="@drawable/tab_user_selector"
                    android:visibility="invisible"
                    />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>