<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
  <include layout="@layout/layout_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_gray">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space15"
            android:paddingTop="@dimen/space10"
            android:paddingRight="@dimen/space15"
            android:paddingBottom="@dimen/space10"
            android:text="@string/bind_alipay_notice"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textfont13" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space15"
        android:paddingRight="@dimen/space15"
        android:background="@color/bg_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space50">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="@dimen/textfont15"
                android:text="@string/alipay_name"/>
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:inputType="none"
                android:hint="@string/pls_input_name"
                android:paddingLeft="@dimen/space15"
                android:paddingRight="@dimen/space15"
                android:textSize="@dimen/textfont14"
                android:background="@color/transparent" />
        </LinearLayout>
        <include layout="@layout/layout_divide_deep_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space50">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="@dimen/textfont15"
                android:text="@string/alipay_account"/>
            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:hint="@string/pls_input_alipay_account"
                android:textSize="@dimen/textfont14"
                android:inputType="none"
                android:paddingLeft="@dimen/space15"
                android:paddingRight="@dimen/space15"
                android:background="@color/transparent" />
        </LinearLayout>
    </LinearLayout>
        <TextView
            android:id="@+id/tv_ensure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space45"
            android:layout_marginLeft="@dimen/textfont15"
            android:layout_marginTop="@dimen/space50"
            android:layout_marginRight="@dimen/space15"
            android:background="@drawable/bg_btn_red"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textfont15" />
    </LinearLayout>
</LinearLayout>